# fapi-pgsql-tmpl

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uv.toml
k8s/: configmap.yaml  deployment.yaml
src/app/: .env.example  config.py  dependencies.py  health.py  main.py
src/app/middleware/: security.py
src/app/utils/: logging.py
